fix(css): displaying too wide

--- a/public/stylesheets/site.less
+++ b/public/stylesheets/site.less
@@ -63,7 +63,7 @@ footer {
 }
 
 .content {
-    width: 140vh;
+    width: 95vh;
     max-width: 90vw;
     margin: 0 auto;
     a:link, a:visited, a:hover, a:active {
